Modificaciones estructurales documentacion

--- a/Plantilla_TFG_latex/apendices/apendices.tex
+++ b/Plantilla_TFG_latex/apendices/apendices.tex
@@ -55,7 +55,7 @@ En cuanto al software, se han utilizado las siguientes herramientas y plataforma
 
 \section{Recursos de Red y Servidores}
 
-Además del hardware y software mencionados, se uso el servidor \textit{bahia.ugr.es} de la Universidad de Granada.
+Además del hardware y software mencionados, se usó el servidor \textit{bahia} de la Universidad de Granada.
 
 \begin{itemize}
     \item \textbf{Nombre del Servidor}: \textit{bahia.ugr.es}
@@ -69,16 +69,16 @@ Para el despliegue de la aplicación y la base de datos, se usaron contendores.
 
 \begin{itemize}
     \item \textbf{Herramienta de Contenedores}: Podman
-    \item \textbf{Aplicación Desplegada}: Applicación Flask
+    \item \textbf{Aplicación Desplegada}: Aplicación Flask
     \item \textbf{Base de Datos Desplegada}: PostgreSQL
     \item \textbf{Servidor de Despliegue}: \textit{bahia.ugr.es}
     \item \textbf{Configuración de Contenedores}: Vólumenes
 \end{itemize}
 
 
-\chapter{Guión de las pruebas con niños}
+\chapter{Guion de las pruebas con niños} \label{chap:guion}
 
-Este guion tiene como objetivo guiar las pruebas de la plataforma de programación para niños. Se busca evaluar la usabilidad, el interés generado y la eficacia educativa del sistema.
+Este guion tiene como objetivo mostrar los pasos seguidos para la realización de las pruebas de la plataforma. Concretamente, se busca evaluar la usabilidad, el interés generado y la eficacia educativa del sistema.
 
 \section{Preparación}
 \begin{itemize}
@@ -243,6 +243,14 @@ Este apéndice contiene los ficheros clave utilizados para el despliegue de la a
       postgres_data:
     \end{lstlisting}
   \end{figure}
-  
+
+\chapter{Manual de usuario} \label{imagenessistema}
+
+\section{Captura de EScritorio}
+
+\section{Capturas del Profesor}
+
+\section{Capturas del Administrador}
+
 
 \end{appendices}
