--- a/Plantilla_TFG_latex/glosario/entradas_glosario.tex
+++ b/Plantilla_TFG_latex/glosario/entradas_glosario.tex
@@ -1,4 +1,4 @@
-\section*{Glosario}
+\section*{Glosario} \label{glosario}
 
 \begin{description}
     \item[ITS:] Sistema Inteligente de Tutorización (Intelligent Tutoring System). Es un sistema que utiliza tecnologías de inteligencia artificial para proporcionar enseñanza personalizada y apoyo educativo a los estudiantes, adaptándose a las necesidades individuales de aprendizaje.
