--- a/Plantilla_TFG_latex/proyecto.tex
+++ b/Plantilla_TFG_latex/proyecto.tex
@@ -301,10 +301,9 @@ pdfproducer = {pdflatex}
     \input{secciones/03_ObjetivoPlanificación}
 
     % Propuesta:
+    \input{secciones/04_Analisis}
 
-    \input{secciones/04_Requisitos}
-
-    \input{secciones/05_Analisis}
+    \input{secciones/05_Requisitos}
 
     % Experimentación
     \input{secciones/06_Implementacion}
@@ -326,8 +325,8 @@ pdfproducer = {pdflatex}
     \input{glosario/entradas_glosario}
     \addcontentsline{toc}{chapter}{Glosario}
     \printglossary
-    \bibliographystyle{plain}
-    \bibliography{Bibliografia/referencias}
+    \bibliographystyle{plain} 
+    \bibliography{Bibliografia/referencias}  \label{bibliografia}
     \addcontentsline{toc}{chapter}{Bibliografía}
     \newpage
 
