--- a/Plantilla_TFG_latex/secciones/02_Contexto.tex
+++ b/Plantilla_TFG_latex/secciones/02_Contexto.tex
@@ -1,4 +1,4 @@
-\chapter{Estado del Arte y Trabajos Relacionados} \label{chap:state_of_the_art}
+\chapter{Estado del Arte y Trabajos Relacionados} \label{chap:stateoftheart}
 
 Dentro de este capítulo se va a presentar todo el conocimiento teórico adquirido para la preparación de la implementación y adaptación del ITS. Concreatamente, el estudio se ha basado en las contribuciones presentadas en las conferencias de la \textit{International Conference on Intelligent Tutoring Systems} de los años 2016 \cite{ITS2016}, 2020 \cite{ITS2020} y 2021 \cite{ITS2021}. Estas ediciones han sido una fuente valiosa de información sobre las últimas tendencias, técnicas y avances en el campo de la tutoría inteligente. 
 
