--- a/Plantilla_TFG_latex/secciones/08_Resultados.tex
+++ b/Plantilla_TFG_latex/secciones/08_Resultados.tex
@@ -6,6 +6,6 @@ Los indicadores cuantitativos mostraron resultados bastante alentadores. Los jó
 
 En términos de usabilidad, las respuestas fueron positivas. La plataforma fue calificada como fácil de usar y práctica, lo cual indica que el diseño de la interfaz es adecuado. La claridad en las instrucciones también fue un punto destacado aunque a veces desconcertante para los más pequeños.
 
-Entre las sugerencias aportadas, la más recurrente fue la adición de elementos gamificados con tal de incrementar la motivación y el compromiso. Este tipo de retroalimentación fue especialmente valiosa y se consideró como una mejora importante a realizar en el sistema. Además, la metodología de pruebas individuales permitió recoger opiniones y sugerencias sin la influencia del grupo.
+Entre las sugerencias aportadas, la más recurrente fue la adición de elementos como juegos con tal de incrementar la motivación y el compromiso. Este tipo de retroalimentación fue especialmente valiosa y se consideró como una mejora importante a realizar en el sistema. Además, la metodología de pruebas individuales permitió recoger opiniones y sugerencias sin la influencia del grupo.
 
-Para concluir, las pruebas iniciales sugirieron que el sistema es eficiente y efectivo en su misión de ofrecer una experiencia de aprendizaje adaptativo. Los comentarios y observaciones de los jóvenes participantes ofrecen un conjunto invaluable de datos que han servido para optimizar y enriquecer el sistema en futuras versiones.
+En conclusión, las pruebas iniciales sugirieron que el sistema era efectivo en su misión de ofrecer una experiencia de aprendizaje adaptativo. Los comentarios y observaciones de los jóvenes participantes ofrecieron un conjunto invaluable de datos que sirvieron para optimizar y enriquecer el sistema.
