--- a/Plantilla_TFG_latex/secciones/09_Conclusiones.tex
+++ b/Plantilla_TFG_latex/secciones/09_Conclusiones.tex
@@ -4,37 +4,31 @@ Este último capítulo sirve como el cierre al Trabajo de Fin de Grado presentad
 
 \section{Conclusiones}
 
-El Trabajo de Fin de Grado se ha centrado en un reto importante: la enseñanza de la programación a niños. Y lo hace en el contexto de una sociedad digitalizada en rápida evolución. Su distintivo radica en un enfoque multidisciplinario \ref{chap:state_of_the_art}. Pedagogía, tecnología educativa y diseño de sistemas se unen para crear una plataforma más completa y adaptable.
+Este TFG se ha centrado en un reto importante: la enseñanza de la programación a niños en el contexto de una sociedad digitalizada en rápida evolución. A través de un enfoque multidisciplinario \ref{chap:state_of_the_art}, combinando pedagogía, tecnología educativa y diseño de sistemas, se ha desarrollado una plataforma innovadora y adaptable, destacándose en el campo de la enseñanza.
 
+Un logro clave ha sido el desarrollo del Sistema de Tutorización Inteligente, que supera las barreras de los métodos tradicionales al ofrecer un aprendizaje personalizado y adaptativo. Este sistema no solo mejora la calidad del aprendizaje, sino que también permite a los estudiantes progresar a su propio ritmo, manteniendo las buenas prácticas de programación.
 
-Uno de los pilares fundamentales de este TFG ha sido el desarrollo del Sistema de Tutorización Inteligente. Supera las limitaciones de los métodos tradicionales, que a menudo carecen de adaptabilidad. Más aún, el ITS permite un aprendizaje personalizado y eficiente. Los alumnos aprenden a su ritmo, manteniendo una alta calidad en su código.
-
-La colaboración con Codelearn S.L. ha añadido un valor significativo a este proyecto, permitiendo una implementación y evaluación más práctica del ITS. Esta relación ha sido fundamental para fusionar teoría y práctica, lo que resulta en los primeros pasos de un sistema de enseñanza más efectivo.
+La colaboración con Codelearn S.L. ha sido instrumental, fusionando teoría y práctica para evaluar y mejorar el ITS, y así dar los primeros pasos hacia un sistema educativo más eficaz y atractivo.
 
 \section{Trabajo Futuro}
 
-Este proyecto ha avanzado mucho, pero el camino por delante es largo. Futuras líneas de investigación y desarrollo incluyen:
-
+A pesar de los avances logrados, el camino por delante es largo. Futuras líneas de investigación y desarrollo incluyen:
 
 \begin{itemize}
     \item \textbf{Variedad de Recursos Didácticos}: Una mayor diversidad en el tipo de ejercicios y evaluaciones, cómo relleno de código o cuestionarios sobre ciertos temas, entre otros ejemplos.
-    \item \textbf{Automatización  de la Corrección}: Conseguir automatizar la corrección para los ejercicios HTML y no se recurra al profesor. 
-    \item \textbf{Sistema de Chat-Bot}: Sistema de conversacional para una primera resolución de dudas comunes en un ejercicio, como una explicación más extensa o ejemplos de ejecución.  
+    \item \textbf{Automatización  de la Corrección}: Conseguir automatizar la corrección para los ejercicios HTML y que no se recurra al profesor. 
+    \item \textbf{Sistema de Chat-Bot}: Sistema conversacional para una primera resolución de dudas comunes en un ejercicio, como una explicación más extensa o ejemplos de ejecución.  
     \item \textbf{Inteligencia Artificial}: El uso de algoritmos de aprendizaje automático que optimizaría la adaptabilidad del sistema a las necesidades individuales del estudiante, debido a la gran cantidad de datos con la que entrenaría.
-    \item \textbf{Feedback en Tiempo Real}: La implementación de análisis del código mientras el estudiante lo este escribiendo con tal de poder hacer ajustes y/o comentarios inmediatios.
+    \item \textbf{Feedback en Tiempo Real}: La implementación de análisis del código mientras el estudiante lo este escribiendo con tal de poder hacer ajustes y/o comentarios inmediatos.
     \item \textbf{Tests A/B}: Realización de pruebas para evaluar la eficacia de distintas técnicas pedagógicas y elementos de diseño.
   \end{itemize}
 
 \section{Reflexión Personal}
+Desde la concepción inicial del proyecto hasta la implementación técnica y las pruebas finales, cada etapa ha contribuido a un desarrollo profesional.
 
-Trabajar en este TFG ha sido tanto desafiante como gratificante. La oportunidad de colaborar con una entidad como Codelearn S.L. me ha ofrecido una visión práctica invaluable, complementando mi formación académica. Este proyecto ha consolidado mi entendimiento de cómo se pueden aplicar las teorías pedagógicas en entornos tecnológicos y ha reforzado mi interés en la intersección entre tecnología y educación. Además, la metodología ágil adoptada para el desarrollo del proyecto ha subrayado la importancia de la flexibilidad y adaptabilidad en un entorno tecnológico en constante cambio.
+Empezando con la colaboración con Codelearn S.L., la experiencia ha sido invaluable. Ver un entorno real me ha ofrecido perspectivas que el ámbito académico raramente puede proporcionar. He aprendido a abordar problemas desde un punto de vista más aplicado, equilibrando teoría y práctica. Fortaleciendo, así, mi comprensión sobre cómo llevar soluciones tecnológicas desde el tablero de dibujo hasta una implementación funcional y real.
 
-\section{Reflexión Personal}
-Desde la concepción inicial del proyecto hasta la implementación técnica y las pruebas finales, cada etapa del TFG ha contribuido a un desarrollo profesional.
+En el aspecto académico, este proyecto ha servido como una especie de trampolín para relacionar la ingeniería de software, los algoritmos y la pedagogía. Ganando una visión más clara de cómo la mayoría de disciplinas se pueden fusionar para producir soluciones educativas efectivas. 
 
-Empezando con la colaboración con Codelearn S.L., la experiencia ha sido especialmente enriquecedora. Trabajar en un entorno real me ha ofrecido perspectivas que el ámbito académico raramente puede proporcionar. He aprendido a abordar problemas desde un punto de vista más aplicado, equilibrando teoría y práctica. Esto ha servido para fortalecer mi comprensión sobre cómo llevar soluciones tecnológicas desde el tablero de dibujo hasta una implementación funcional y real.
-
-En el aspecto académico, este proyecto ha servido como una especie de trampolín para relacionar la ingeniería de software, los algoritmos y la pedagogía. He ganado una visión más clara de cómo la mayoría de disciplinas se pueden fusionar para  producir soluciones educativas efectivas. 
-
-El desarrollo ágil adoptado para el proyecto fue una lección invaluable en sí misma. Me enseñó la importancia de la adaptabilidad y la agilidad en un entorno tecnológico que nunca se detiene. La retroalimentación continua y los ajustes constantes fueron cruciales para navegar a través de los desafíos que inevitablemente surgieron.
+El desarrollo ágil adoptado para el proyecto fue una lección valiosa en sí misma. Me enseñó la importancia de la adaptabilidad y la agilidad en un entorno tecnológico que nunca se detiene. La retroalimentación continua y los ajustes constantes fueron cruciales para navegar a través de los desafíos que inevitablemente surgieron.
 
